# gimli

./: .bazelrc  .clang-format  .clang-tidy  BUILD  MODULE.bazel  bazel.patch  cc_indexfile.json
gimli/: BUILD  gimli.proto  gimli_client.cc  gimli_server.cc  gimli_service_impl.cc  gimli_service_impl.h  gimli_service_impl_test.cc  grpc_test_server.cc  grpc_test_server.h  gtest_logging.cc  gtest_runfiles.cc  gtest_runfiles.h  publish_build_event_callback_service_impl.cc  publish_build_event_callback_service_impl.h  publish_build_event_callback_service_impl_test.cc  recording.proto  report.h  report.proto  reporter.cc  reporter.h  reporter_test.cc  stderr_processor.cc  stderr_processor.h  stderr_processor_test.cc
gimli/testdata/: BUILD  README.md  non_fatal_error.cc  non_fatal_error.json  non_fatal_error.textproto
