bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor",
)

bazel_dep(name = "bazel_clang_tidy", version = "1.0")
git_override(
    module_name = "bazel_clang_tidy",
    commit = "bff5c59c843221b05ef0e37cef089ecc9d24e7da",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "gazelle_cc", version = "0.1.0")
bazel_dep(name = "googleapis", version = "0.0.0-20251111-659ea6e9")
bazel_dep(name = "googleapis-cc", version = "1.0.0")
bazel_dep(name = "googleapis-grpc-cc", version = "1.0.0")
bazel_dep(name = "grpc", version = "1.76.0.bcr.1")
bazel_dep(name = "protobuf", version = "33.1")
bazel_dep(name = "rules_cc", version = "0.2.14")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel",
    integrity = "sha256-I6SWs94Y3yDoFik8HpVEPwRifp+LmsS6cN0gpeCaaVE=",
    patch_args = ["-p1"],
    patches = ["//:bazel.patch"],
    strip_prefix = "bazel-8.4.2",
    urls = [
        "https://github.com/bazelbuild/bazel/archive/refs/tags/8.4.2.tar.gz",
    ],
)
